--- a/index.html
+++ b/index.html
@@ -8,21 +8,12 @@
 </head>
 
 <body>
-    <div id="tree" class="col-7">
-        <div id="title">清华流量助手</div>
-        <svg id="year"></svg>
-        <svg id="month"></svg>
-        <svg id="calendar"></svg>
-    </div>
-
-    <div id="map" class="col-5">
-        <img src="src/THU-map.jpg" />
-    </div>
+	<svg id="everything"></svg>
 
     <script src="d3/d3.js"></script>
 	<script src="jquery/jquery-3.3.1.min.js"></script>
 	<script src="util.js"></script>
-	<script src="traffic-detail-tree.js"></script>
+	<script src="traffic-detail.js"></script>
 </body>
 
 </html>
