--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="utf-8">
     <title>清华流量助手</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="src/icons8-outline-50.png">
+    <link rel="stylesheet" type="text/css" href="src/style.css">
 </head>
 
 <body>
 	<svg id="everything"></svg>
 
-    <script src="d3/d3.js"></script>
-	<script src="jquery/jquery-3.3.1.min.js"></script>
-	<script src="util.js"></script>
-	<script src="traffic-detail.js"></script>
+    <script src="lib/d3/d3.js"></script>
+	<script src="lib/jquery/jquery-3.3.1.min.js"></script>
+	<script src="src/traffic-detail.js"></script>
+	<!-- <script src="src/simple.js"></script> -->
 </body>
 
 </html>
