--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>清华流量助手</title>
-    <link rel="icon" href="src/icons8-outline-50.png">
+    <link rel="icon" href="src/icon-50.png">
     <link rel="stylesheet" type="text/css" href="src/style.css">
 </head>
 
@@ -13,7 +13,6 @@
     <script src="lib/d3/d3.js"></script>
     <script src="lib/jquery/jquery-3.3.1.min.js"></script>
     <script src="src/traffic-detail.js"></script>
-    <!-- <script src="src/simple.js"></script> -->
 </body>
 
 </html>
