--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <svg id="everything"></svg>
+    <!-- <script src="lib/d3/d3.v3.min.js"></script> -->
     <script src="lib/d3/d3.js"></script>
     <script src="lib/jquery/jquery-3.3.1.min.js"></script>
     <script src="src/traffic-detail.js"></script>
